--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "http-server": "^14.1.1",
     "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20"
   }
